--- a/public/manifest.json
+++ b/public/manifest.json
@@ -39,9 +39,8 @@
 		}
 	],
 	"lang": "en-US",
-	"theme_color": "#50E3C2",
+	"theme_color": "#000000",
 	"background_color": "#000000",
 	"start_url": "/",
-	"display": "standalone",
-	"orientation": "portrait"
+	"display": "standalone"
 }
