--- a/cybersurf.conf
+++ b/cybersurf.conf
@@ -3,15 +3,12 @@
 description "cyber.surf server"
 author      "Abram Kash"
 
-respawn
-respawn limit 15 5
-
-start on filesystem or runlevel [2345]
-stop on shutdown
+start on runlevel [2345]
+stop on runlevel [06]
 
 script
 	cd /var/www/cyber.surf
-	exec bundle exec puma -e production -d --config puma.rb
+	exec bundle exec puma -e production --config puma.rb
 end script
 
 pre-stop script
